MR-52 add required propel schemas

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.2",
-    "spryker/kernel": "^3.30.0"
+    "spryker/kernel": "^3.30.0",
+    "spryker/state-machine": "^2.7.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
