MR-363 add test for merchant sales order module

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     "spryker/state-machine": "^2.7.0"
   },
   "require-dev": {
-    "spryker/code-sniffer": "*"
+    "spryker/code-sniffer": "*",
+    "spryker/propel": "*",
+    "spryker/testify": "*"
   },
   "autoload": {
     "psr-4": {
