--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
   "require": {
     "php": ">=7.2",
     "spryker/kernel": "^3.30.0",
+    "spryker/merchant": "^2.0.0",
+    "spryker/merchant-sales-order": "^0.4.0",
     "spryker/merchant-sales-order-extension": "^0.1.0",
-    "spryker/state-machine": "^2.7.0"
+    "spryker/state-machine": "^2.6.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
