--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "spryker/merchant": "^2.0.0",
     "spryker/merchant-sales-order": "^0.4.0",
     "spryker/merchant-sales-order-extension": "^0.1.0",
-    "spryker/state-machine": "^2.8.0"
+    "spryker/state-machine": "^2.8.0",
+    "spryker/symfony": "^3.0.0",
+    "spryker/util-data-reader": "^1.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*"
