--- a/tests/SprykerTest/Zed/MerchantOms/codeception.yml
+++ b/tests/SprykerTest/Zed/MerchantOms/codeception.yml
@@ -11,6 +11,18 @@ coverage:
         include:
             - '../../../../src/*'
 suites:
+    Communication:
+        path: Communication
+        class_name: MerchantOmsCommunicationTester
+        modules:
+            enabled:
+                - Asserts
+                - \SprykerTest\Shared\Testify\Helper\Environment
+                - \SprykerTest\Shared\Testify\Helper\ConfigHelper
+                - \SprykerTest\Shared\Testify\Helper\LocatorHelper
+                - \SprykerTest\Shared\Testify\Helper\DependencyHelper
+                - \SprykerTest\Shared\Propel\Helper\TransactionHelper
+
     Business:
         path: Business
         class_name: MerchantOmsBusinessTester
