MR-313 Fixes after TechL review

--- a/tests/SprykerTest/Zed/MerchantOms/codeception.yml
+++ b/tests/SprykerTest/Zed/MerchantOms/codeception.yml
@@ -44,3 +44,4 @@ suites:
                 - \SprykerTest\Zed\Merchant\Helper\MerchantHelper
                 - \SprykerTest\Zed\MerchantSalesOrder\Helper\MerchantSalesHelper
                 - \SprykerTest\Zed\StateMachine\Helper\StateMachineHelper
+                - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
