--- a/tests/SprykerTest/Zed/MerchantOms/codeception.yml
+++ b/tests/SprykerTest/Zed/MerchantOms/codeception.yml
@@ -3,7 +3,7 @@ paths:
     tests: .
     data: ../../../_data
     support: _support
-    log: ../../../_output
+    output: ../../../_output
 coverage:
     enabled: true
     remote: false
@@ -13,7 +13,7 @@ coverage:
 suites:
     Communication:
         path: Communication
-        class_name: MerchantOmsCommunicationTester
+        actor: MerchantOmsCommunicationTester
         modules:
             enabled:
                 - Asserts
@@ -30,7 +30,7 @@ suites:
 
     Business:
         path: Business
-        class_name: MerchantOmsBusinessTester
+        actor: MerchantOmsBusinessTester
         modules:
             enabled:
                 - Asserts
