--- a/tests/SprykerTest/Zed/MerchantOms/codeception.yml
+++ b/tests/SprykerTest/Zed/MerchantOms/codeception.yml
@@ -48,3 +48,5 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
                 - SprykerTest\Shared\Customer\Helper\CustomerDataHelper
                 - SprykerTest\Shared\Store\Helper\StoreDataHelper
+                - \SprykerTest\Service\Container\Helper\ContainerHelper
+                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
