FRW-1817 Fixed false positive test cases with Dynamic Multistore mode enabled. (#10862)
FRW-6382 Adjust StoreDependencyHelper and related tests to cover cases when there is no store provided

--- a/tests/SprykerTest/Zed/MerchantOms/codeception.yml
+++ b/tests/SprykerTest/Zed/MerchantOms/codeception.yml
@@ -49,4 +49,4 @@ suites:
                 - SprykerTest\Shared\Customer\Helper\CustomerDataHelper
                 - SprykerTest\Shared\Store\Helper\StoreDataHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
-                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Zed\Store\Helper\StoreDependencyHelper
